Fix scrollbar display when drag outside the box

--- a/jquery.scrollable.css
+++ b/jquery.scrollable.css
@@ -84,6 +84,7 @@
     opacity : 0;
 }
 
+.scrollable.autohide .scrollbar.scrolling,
 .scrollable.autohide.hover .scrollbar {
     filter : alpha(opacity=100);
     opacity : 1;
